<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="DbstarDVB">DbstarDVB</string>
	<string name="DbstarTest">DbstarTest</string>
	<string name="DvbpushTest">DvbpushTest</string>
	<string name="PlayerTest">PlayerTest</string>
	<string name="UpgradeTest">UpgradeTest</string>
	<string name="DiskTest">DiskTest</string>
	<string name="BroadcastTest">BroadcastTest</string>

	<string name="DvbButton01">Init Dvbpush</string>
	<string name="DvbButton02">Start Taskinfo </string>
	<string name="DvbButton03">Get Taskinfo</string>
	<string name="DvbButton04">Stop Taskinfo</string>
	<string name="DvbButton05">Uninit Dvbpush</string>
	<string name="Command">Command</string>
	<string name="Progress">Progress</string>
	<string name="Info">Info</string>

	<string name="NormalPlay">Play Normal File</string>
	<string name="DRMPlay">Play DRM File</string>

	<string name="DiskButton01">Get Disk Info</string>
	<string name="DiskButton02">Create Disk Partition</string>
	<string name="DiskButton03">Delete Disk Partition</string>
	<string name="DiskButton04">Test Disk Read/Write</string>

	<string name="sub_font">font:</string>
	<string name="sub_position_v">position:</string>
	<string name="sub_color">color:</string>
	<string name="color_white">White</string>
	<string name="color_yellow">Yellow</string>
	<string name="color_blue">Blue</string>
	<string name="sub_switch">switch:</string>
	<string name="sub_no_subtitle">No subtitle!</string>
	<string name="str_no_file">No file Found!</string>
	<string name="str_exit">exit</string>
	<string name="setting_resume">Resume Mode</string>
	<string name="setting_playmode">Play Mode</string>
	<string name="setting_playmode_repeatall">Repeat All</string>
	<string name="setting_playmode_repeatone">Repeat One</string>
	<string name="setting_audiotrack">Audio Track</string>
	<string name="setting_subtitle">Subtitle</string>
	<string name="setting_displaymode">Display Mode</string>
	<string name="setting_displaymode_normal">Normal</string>
	<string name="setting_displaymode_normal_noscaleup">No Scale Up</string>
	<string name="setting_displaymode_fullscreen">Full Screen</string>
	<string name="setting_brightness">Brightness</string>
	<string name="setting_3d_mode">Play 3D Mode</string>	
	<string name="setting_3d_diable">OFF</string> 
	<string name="setting_3d_grating_open">Open Grating</string> 
	<string name="setting_3d_grating_close">Close Grating</string> 
	<string name="setting_3d_auto">AUTO</string>  
	<string name="setting_3d_lr">L/R</string>
	<string name="setting_3d_bt">B/T</string>                                               
	<string name="setting_3d_2d_l">3D-2D-L</string>
	<string name="setting_3d_2d_r">3D-2D-R</string> 
	<string name="setting_3d_2d_t">3D-2D-T</string>
	<string name="setting_3d_2d_b">3D-2D-B</string>
		<string name="setting_3d_2d_auto1">3D-2D-AUTO1</string>
		<string name="setting_3d_2d_auto2">3D-2D-AUTO2</string> 
		<string name="setting_2d_3d">2D-3D</string> 
	<string name="setting_3d_field_depth">Field Depth</string> 
	<string name="setting_3d_auto_switch">Auto Switch</string> 
	<string name="setting_3d_lr_switch">LR Switch</string> 
		<string name="setting_3d_tb_switch">TB Switch</string>  
		<string name="setting_3d_full_off">scale2 off</string> 
		<string name="setting_3d_lr_full">L/R Half2Full</string> 
		<string name="setting_3d_tb_full">T/B Half2Full</string> 

	<string name="setting_play_chapters">Play Chapters</string>
	<string name="setting_chapters">Chapters</string>
	<string name="app_name">MoviePlayer</string>
	<string name="main_activity">MoviePlayer</string>
	<string name="str_ok">OK</string>
	<string name="str_cancel">Cancel</string>
	<string name="str_time_null">00:00:00</string>
	<string name="str_resume_play">Resume this video from last position?</string>
	<string name="str_on">On</string>
	<string name="str_off">Off</string>
	<string name="str_about">About</string>
	<string name="str_file_information">File Information</string>
	<string name="str_file_name">Name</string>
	<string name="str_file_format">Format</string>
	<string name="str_file_size">Size</string>
	<string name="str_file_resolution">Resolution</string>
	<string name="str_file_duration">Duration</string>
	<string name="setting_audiochannel">Audio Chanel</string>
	<string name="str_left_auidochannel">Left Mono</string>
	<string name="str_right_auidochannel">Right Mono</string>
	<string name="str_stereo_auidochannel">Stereo</string>
	<string name="file_have_no_audio">file have no audio</string>

	<string name="memory_device_str">Internal Memory </string>
	<string name="sdcard_device_str">Local Disk</string>
	<string name="ext_sdcard_device_str">External TF Card</string>
	<string name="sata_device_str">SATA</string>
	<string name="usb_device_str">USB</string>

	<string name="movie_info_view_notes">*信息键可以再次唤出本窗口</string>
    <string name="close_button_text">关闭本窗</string>
    <string name="replay_button_text">从头播放</string>
    <string name="add_favourite_button_text">收藏本片</string>
    <string name="delete_button_text">删除本片</string>
    <string name="favorite_view_notes">你已收藏本片，以后可直接在个人中心中查找</string>
    <string name="button_text_iknow">我知道了</string>
    <string name="delete_view_notes">删除后你将无法再观看此片，是否从磁盘中删除？</string>
    <string name="button_text_notdelete">不删除</string>
    <string name="button_text_delete">删除</string>
    
    <string name="property_director">导演:&#160;</string>
    <string name="property_actors">主演:&#160;</string>
    <string name="property_scenarist">编剧:&#160;</string>
    <string name="property_codeformat">视频编码格式:&#160;</string>
    <string name="property_bitrate">码率:&#160;</string>
    <string name="property_resolution">分辨率:&#160;</string>
    
    <!-- Smartcard -->
    <string name="smartcard_status_title">智能卡</string>
    <string name="smartcard_status_in">智能卡已经插入！</string>
    <string name="smartcard_status_out">智能卡无效</string>
    <string name="smartcard_status_invlid">智能卡无效</string>
    
    <string name="button_text_ok">确定</string>
    <string name="button_text_cancel">取消</string>
    
    <string name="error_unknown">未知错误</string>
    <string name="drm_error_fileerror">文件错误</string>
   <string name="drm_error_noentitle">没有授权</string>
    <!-- <string name="drm_error_notwatchtime">此节目不满足观看时间</string>
    <string name="drm_error_notissuetime">此节目不满足发行时间</string> -->
    <string name="drm_error_rightlimit">此节目有版权限制</string>
    <string name="drm_error_card_invalid">智能卡无效</string>
    
    
     <string name="player_play_mode">播放模式</string>
    <string name="player_play_mode_single">单次播放</string>
    <string name="player_play_mode_loop">循环播放</string>
</resources>
