<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>

	<TextView
	android:id="@+id/DiskTest"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/DiskTest"
	android:gravity="center_horizontal"
	android:textSize="18sp"
	/>
	<Button
	android:id="@+id/DiskButton01"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/DiskButton01"
	android:gravity="center_horizontal"
	android:textSize="18sp"
	/>
	<Button
	android:id="@+id/DiskButton02"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/DiskButton02"
	android:gravity="center_horizontal"
	android:textSize="18sp"
	/>
	<Button
	android:id="@+id/DiskButton03"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/DiskButton03"
	android:gravity="center_horizontal"
	android:textSize="18sp"
	/>
	<TextView
	android:id="@+id/Info"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/Info"
	android:gravity="left" android:paddingLeft="100px"
	android:textSize="18sp"
	/>
</LinearLayout>
