<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>

	<TextView
	android:id="@+id/PlayerTest"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/PlayerTest"
	android:gravity="center_horizontal"
	android:textSize="18sp"
	/>
	<Button
	android:id="@+id/PlayerButton01"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/NormalPlay"
	android:gravity="center_horizontal"
	android:textSize="18sp"
	/>
	<Button
	android:id="@+id/PlayerButton02"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/DRMPlay"
	android:gravity="center_horizontal"
	android:textSize="18sp"
	/>
</LinearLayout>
